--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark-html": "^15.0.2",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "unified": "^10.1.2"
